# dbcooper-py

./: .env.dev  MANIFEST.in  Makefile  README.Rmd  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
binder/: requirements.txt
dbcooper/: __init__.py  autotables.py  base.py  builder.py  collect.py  dbcooper.py  finder.py  inspect.py  tables.py  utils.py
dbcooper/data/: __init__.py  lahman.py
dbcooper/tests/: conftest.py  helpers.py  test_example_class.py  test_example_schemas.py
docs/: conf.py  index.rst
docs/api/: example_class.rst  index.rst
examples/: backends.Rmd  lahman.Rmd
requirements/: 2021-01-01.txt  dev.txt
template_python_pkg/: __init__.py
template_python_pkg/tests/: test_example_class.py
