[metadata]
name = dbcooper
version = file: VERSION
description = Short description of the package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/machow/template-python-pkg
author = Michael Chow
author_email = mc_al_github@fastmail.com
license = MIT
keywords = template, packaging
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
include_package_data = True
zipsafe = False

python_requires = >3.8
install_requires =
    siuba @ git+https://github.com/machow/siuba.git@feat-siu-dispatch
    sqlalchemy
    tabulate


[options.extras_require]
dev =
    pip-tools
    importlib-resources
    pydata-sphinx-theme
    pytest
    pytest-dotenv
    sqlalchemy-bigquery
    snowflake-sqlalchemy
    psycopg2-binary
    pymysql


[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 90
ignore =
    E501    # line too long
    W503    # line before binary operator
